tests/spec/emit/snapshots/interop_fn_value_partial_slice_option.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:fmt"
  import "go:example.com/aws"
  
  fn main() {
    let f = aws.Read
    match f() {
      Ok(xs) => fmt.Println("ok", Slice.length(xs)),
      Both(xs, e) => fmt.Println("both", Slice.length(xs), e),
      Err(e) => fmt.Println("err", e),
    }
  }
---
package main

import (
	"example.com/aws"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	cb := aws.Read
	f := func() ([]lisette.Option[string], error) {
		ret, ret_1 := cb()
		if ret == nil {
			return nil, ret_1
		}
		wrapped := make([]lisette.Option[string], len(ret))
		for i, v := range ret {
			if v != nil {
				wrapped[i] = lisette.MakeOptionSome[string](*v)
			} else {
				wrapped[i] = lisette.MakeOptionNone[string]()
			}
		}
		return wrapped, ret_1
	}
	if xs, e := f(); e == nil {
		fmt.Println("ok", len(xs))
	} else if xs == nil {
		fmt.Println("err", e)
	} else {
		fmt.Println("both", len(xs), e)
	}
}
