tests/spec/emit/snapshots/interop_fn_value_result_let_call.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:fmt"
  import "go:example.com/aws"
  
  fn main() {
    let f = aws.Make
    let r = f()
    match r {
      Ok(xs) => {
        for x in xs {
          match x {
            Some(v) => fmt.Println(v),
            None => fmt.Println("none"),
          }
        }
      },
      Err(e) => { let _ = e },
    }
  }
---
package main

import (
	"example.com/aws"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	cb := aws.Make
	f := func() ([]lisette.Option[string], error) {
		ret, ret_1 := cb()
		wrapped := make([]lisette.Option[string], len(ret))
		for i, v := range ret {
			if v != nil {
				wrapped[i] = lisette.MakeOptionSome[string](*v)
			} else {
				wrapped[i] = lisette.MakeOptionNone[string]()
			}
		}
		return wrapped, ret_1
	}
	r, err := f()
	if err == nil {
		for _, x := range r {
			if x.Tag == lisette.OptionSome {
				fmt.Println(x.SomeVal)
			} else {
				fmt.Println("none")
			}
		}
	} else {
		_ = err
	}
}
