tests/spec/emit/snapshots/interop_fn_value_result_slice_option_return.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:fmt"
  import "go:example.com/aws"
  
  fn main() {
    let f = aws.Make
    match f() {
      Ok(xs) => {
        for x in xs {
          match x {
            Some(v) => fmt.Println(v),
            None => fmt.Println("none"),
          }
        }
      },
      Err(e) => { let _ = e },
    }
  }
---
package main

import (
	"example.com/aws"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	cb := aws.Make
	f := func() ([]lisette.Option[string], error) {
		ret, ret_1 := cb()
		wrapped := make([]lisette.Option[string], len(ret))
		for i, v_1 := range ret {
			if v_1 != nil {
				wrapped[i] = lisette.MakeOptionSome[string](*v_1)
			} else {
				wrapped[i] = lisette.MakeOptionNone[string]()
			}
		}
		return wrapped, ret_1
	}
	if xs, e := f(); e == nil {
		for _, x := range xs {
			if x.Tag == lisette.OptionSome {
				fmt.Println(x.SomeVal)
			} else {
				fmt.Println("none")
			}
		}
	} else {
		_ = e
	}
}
