tests/spec/emit/snapshots/interop_fn_value_slice_option_return.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:fmt"
  import "go:example.com/aws"
  
  fn main() {
    let f = aws.Make
    for x in f() {
      match x {
        Some(v) => fmt.Println(v),
        None => fmt.Println("none"),
      }
    }
  }
---
package main

import (
	"example.com/aws"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	cb := aws.Make
	f := func() []lisette.Option[string] {
		src := cb()
		wrapped := make([]lisette.Option[string], len(src))
		for i, v_1 := range src {
			if v_1 != nil {
				wrapped[i] = lisette.MakeOptionSome[string](*v_1)
			} else {
				wrapped[i] = lisette.MakeOptionNone[string]()
			}
		}
		return wrapped
	}
	for _, x := range f() {
		if x.Tag == lisette.OptionSome {
			fmt.Println(x.SomeVal)
		} else {
			fmt.Println("none")
		}
	}
}
