tests/spec/emit/snapshots/interop_fn_value_tuple_nested_option_slot.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/aws"
  
  fn apply(f: fn() -> (Option<Slice<Option<string>>>, int)) -> (Option<Slice<Option<string>>>, int) {
    f()
  }
  
  fn main() {
    let (xs, n) = apply(aws.Make)
    let _ = n
    match xs {
      Some(inner) => { for x in inner { let _ = x } },
      None => {},
    }
  }
---
package main

import (
	"example.com/aws"
	lisette "github.com/ivov/lisette/prelude"
)

func apply(f func() (lisette.Option[[]lisette.Option[string]], int)) (lisette.Option[[]lisette.Option[string]], int) {
	return f()
}

func main() {
	cb := aws.Make
	xs, n := apply(func() (lisette.Option[[]lisette.Option[string]], int) {
		ret, ret_1 := cb()
		var option lisette.Option[[]lisette.Option[string]]
		if ret != nil {
			src := *ret
			wrapped := make([]lisette.Option[string], len(src))
			for i, v := range src {
				if v != nil {
					wrapped[i] = lisette.MakeOptionSome[string](*v)
				} else {
					wrapped[i] = lisette.MakeOptionNone[string]()
				}
			}
			option = lisette.MakeOptionSome[[]lisette.Option[string]](wrapped)
		} else {
			option = lisette.MakeOptionNone[[]lisette.Option[string]]()
		}
		return option, ret_1
	})
	_ = n
	if xs.Tag == lisette.OptionSome {
		for _, x := range xs.SomeVal {
			_ = x
		}
	}
}
