tests/spec/emit/snapshots/interop_go_fn_into_go_callback_param.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/aws"
  
  fn main() {
    aws.Use(aws.Make)
  }
---
package main

import "example.com/aws"

func main() {
	aws.Use(aws.Make)
}
