tests/spec/emit/snapshots/interop_go_fn_into_go_callback_param_result.snap
---
source: tests/spec/emit/interop_matrix.rs
description: "\nimport \"go:example.com/aws\"\n\nfn main() {\n  aws.Use(aws.Make)\n}\n"
---
package main

import "example.com/aws"

func main() {
	aws.Use(aws.Make)
}
