tests/spec/emit/snapshots/interop_go_fn_into_tuple_slot_with_nullable_option.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:encoding/pem"
  
  fn apply(f: fn(Slice<byte>) -> (Option<Ref<pem.Block>>, Slice<byte>), data: Slice<byte>) -> bool {
    let (block, _) = f(data)
    block.is_some()
  }
  
  fn main() {
    let _ = apply(pem.Decode, [])
  }
---
package main

import (
	"encoding/pem"
	lisette "github.com/ivov/lisette/prelude"
)

func apply(f func([]byte) (*pem.Block, []byte), data []byte) bool {
	ret, ret_1 := f(data)
	option := lisette.OptionFromNilable[*pem.Block](ret, ret == nil)
	tup := lisette.MakeTuple2(option, ret_1)
	block := tup.First
	return block.IsSome()
}

func main() {
	apply(pem.Decode, []byte{})
}
